# signtractions

./: .gitlab-ci.yml  README.in  README.md  build-requirements.txt  make-readme.py  pyproject.toml  requirements-tests.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: build.yml  release.yml  tox-tests.yml
docker/: Dockerfile  Dockerfile.base  entry_point.sh  redis.conf
owasp/: dependency_check_supressions.xml
signtractions/: generate_entry_points.py
signtractions/models/: quay.py  signing.py  snapshot.py
signtractions/resources/: __init__.py  command_executor.py  cosign.py  fake_gsheets.py  fake_quay_client.py  fake_signing_wrapper.py  fake_sigstore.py  gsheets.py  quay_client.py  quay_session.py  reference_constructor.py  signing_wrapper.py  sigstore.py
signtractions/resources/utils/: misc.py
signtractions/tractions/: containers.py  signing.py  snapshot.py  verify.py
signtractions/tractors/: t_get_latest_repo_tags.py  t_sign_containers.py  t_sign_repos.py  t_sign_snapshot.py  t_verifier.py
tests/: conftest.py  test_fake_quay_client.py  test_quay_client.py  test_quay_session.py  test_signer_wrapper.py  test_tractions_containers.py  test_tractions_signing.py  test_tractor_sign_containers.py  test_tractor_sign_snapshot.py  test_utils.py
tests/utils/: misc.py
