[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "signtractions"
version = "0.0.7"
description = "signtractions"
readme = "README.md"
authors = [
    { name = "Jindrich Luza", email = "jluza@redhat.com" }
]
license = { text = "LGPL-3.0-only" }
requires-python = ">=3.6"
dependencies = [
    "koji",
    "requests",
    "requests_kerberos",
    "pytractions==0.0.10",
    "gssapi",
    "google-api-python-client",
    "google_auth_oauthlib",
    "google-auth",
    "pubtools",
    "pubtools-pyxis",
    "pubtools-sign"
]
dynamic=["entry-points"]

[project.urls]
Homepage = "https://github.com/midnightercz/signtractions"

[tool.setuptools]
package-dir = {"signtractions" = "signtractions"}

[tool.setuptools.package-data]
"signtractions" = ["build-requirements.txt",  "generate-entry-points.py"]

[tool.setuptools.dynamic]
entry-points = { file = "signtractions/entry_points.txt" }

